--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,13 +9,13 @@
     <string name="share_app">Поделиться приложением</string>
     <string name="mail_to_support">Написать в поддержку</string>
     <string name="user_agreement">Пользовательское соглашение</string>
-    <string name="link">https://practicum.yandex.ru/android-developer/</string>
-    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
-    <string name="mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="link">https://vivt.ru/</string>
+    <string name="mail_subject">Сообщение богу приложения Playlist Maker</string>
+    <string name="mail_message">Спасибо Полякову Фёдору за крутое приложение!</string>
     <string name="uri_parse">mailto:</string>
     <string name="email">for_mail_box@mail.ru</string>
     <string name="send_intent_type">text/plain</string>
-    <string name="offer">https://yandex.ru</string>
+    <string name="offer">https://ru.freepik.com/photos/котята/</string>
     <string name="btn_clear">X</string>
     <string name="nothing_found">Ничего не нашлось</string>
     <string name="something_went_wrong">Что-то пошло не так.Ошибка сервера...</string>
@@ -39,7 +39,7 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="no_track_time">нет данных</string>
     <string name="btn_update">Обновить</string>
-    <string name="recent_tracks_list_title">Вы искали</string>
+    <string name="recent_tracks_list_title">История поиска</string>
     <string name="app_preference_file_name">search_history</string>
     <string name="recent_tracks_list_key">RECENT_SEARCH_KEY</string>
     <string name="btn_clear_history">Очистить историю</string>
